--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
   "private": false,
   "main": "index.js",
   "dependencies": {
-    "@material-ui/icons": "1.0.0-beta.42",
-    "chartist": "0.10.1",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "1.0.0",
+    "chartist": "0.11.0",
     "classnames": "2.2.5",
-    "material-ui": "1.0.0-beta.41",
-    "npm-run-all": "4.1.2",
+    "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.3.0",
-    "react": "16.2.0",
+    "react": "16.4.0",
     "react-chartist": "0.13.1",
-    "react-dom": "16.2.0",
+    "react-dom": "16.4.0",
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.0.17",
-    "react-swipeable-views": "0.12.12"
+    "react-scripts": "1.1.4",
+    "react-swipeable-views": "0.12.13"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
   },
   "repository": {
     "type": "git",
@@ -35,5 +35,10 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
-  "homepage": "https://creativetimofficial.github.io/material-dashboard-react/#/dashboard"
+  "homepage": "https://creativetimofficial.github.io/material-dashboard-react/#/dashboard",
+  "devDependencies": {
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.5.2",
+    "react-hot-loader": "^4.2.0"
+  }
 }
