--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "devDependencies": {
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewired": "^1.5.2",
-    "react-hot-loader": "^4.2.0"
+    "react-hot-loader": "^4.2.0",
+    "ts-loader": "^4.3.0",
+    "typescript": "^2.8.3"
   }
 }
