--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "private": false,
   "main": "index.js",
   "dependencies": {
-    "@material-ui/core": "^1.0.0",
-    "@material-ui/icons": "1.0.0",
     "chartist": "0.11.0",
     "classnames": "2.2.5",
     "npm-run-all": "4.1.3",
@@ -16,14 +14,10 @@
     "react-dom": "16.4.0",
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.1.4",
     "react-swipeable-views": "0.12.13"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -37,10 +31,38 @@
   },
   "homepage": "https://creativetimofficial.github.io/material-dashboard-react/#/dashboard",
   "devDependencies": {
-    "react-app-rewire-hot-loader": "^1.0.1",
-    "react-app-rewired": "^1.5.2",
+    "@babel/core": "^7.0.0-beta.48",
+    "@babel/preset-env": "^7.0.0-beta.48",
+    "@babel/preset-react": "^7.0.0-beta.48",
+    "@babel/preset-stage-0": "^7.0.0-beta.48",
+    "@babel/preset-stage-1": "^7.0.0-beta.48",
+    "@babel/preset-typescript": "^7.0.0-beta.48",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "1.0.0",
+    "@types/chai": "^4.1.3",
+    "@types/classnames": "^2.2.3",
+    "@types/jasmine": "^2.8.7",
+    "@types/node": "^10.1.2",
+    "@types/web-animations-js": "^2.2.6",
+    "babel-loader": "^8.0.0-beta",
+    "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
+    "extract-loader": "^2.0.1",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.1.0",
+    "jasmine-ts": "^0.2.1",
     "react-hot-loader": "^4.2.0",
-    "ts-loader": "^4.3.0",
-    "typescript": "^2.8.3"
+    "style-loader": "^0.21.0",
+    "typescript": "^2.8.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.3",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4"
   }
 }
