--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.1.0",
     "jasmine-ts": "^0.2.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "react-hot-loader": "^4.2.0",
     "style-loader": "^0.21.0",
     "typescript": "^2.8.3",
